--- a/webpack/templates/index.html
+++ b/webpack/templates/index.html
@@ -9,5 +9,6 @@
 <body>
 	<div id="__root"></div>
 	<script src="/dist/bundle.js"></script>
+	<script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
 </html>
