--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -1,3 +1,5 @@
+$fontMain: "Fira", sans-serif
+$fontCondensed: "Fira Condensed", sans-serif
 
 =pos($position, $top: auto, $left: auto, $right: auto, $bottom: auto)
 	position: $position
