--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -9,7 +9,7 @@ body
 	margin: 0
 	padding: 0
 	font-size: 14px
-	font-family: sans-serif
+	font-family: $fontMain
 	user-select: none
 	*
 		margin: 0
@@ -29,3 +29,25 @@ body
 
 		&:before, &:after
 			box-sizing: border-box
+
+h1, h2, h3, h4, h5, h6
+	font-family: $fontCondensed
+	font-weight: 400
+
+h1
+	font-size: 48px
+
+h2
+	font-size: 36px
+
+h3
+	font-size: 30px
+
+h4
+	font-size: 24px
+
+h5
+	font-size: 20px
+
+h6
+	font-size: 18px
