added tooltip component and basic styles

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -11,6 +11,10 @@ body
 	font-size: 14px
 	font-family: $fontMain
 	user-select: none
+	background-color: $colorBg
+	background-image: radial-gradient(circle at top center, rgba($colorLight, .24), rgba($colorLight, 0))
+	background-attachment: fixed
+	color: $colorLight
 	*
 		margin: 0
 		padding: 0
