--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -1,6 +1,15 @@
 $fontMain: "Fira", sans-serif
 $fontCondensed: "Fira Condensed", sans-serif
 
+$transition: cubic-bezier(.23,1,.32,1)
+$tjelly: cubic-bezier(.55,.17,.39,1.21)
+
+$colorBg: #0f3057
+$colorLight: #fcdab7
+$colorDark: #00587a
+$colorMain: #008891
+$colorAccent: #02d4a0
+
 =pos($position, $top: auto, $left: auto, $right: auto, $bottom: auto)
 	position: $position
 	top: $top
