window system POC

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -15,6 +15,9 @@ body
 	background-image: radial-gradient(circle at top center, rgba($colorLight, .24), rgba($colorLight, 0))
 	background-attachment: fixed
 	color: $colorLight
+	overflow: hidden
+	a
+		color: blue
 	*
 		margin: 0
 		padding: 0
