--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -9,6 +9,7 @@ $colorLight: #fcdab7
 $colorDark: #00587a
 $colorMain: #008891
 $colorAccent: #02d4a0
+$colorPanel: #233357
 
 =pos($position, $top: auto, $left: auto, $right: auto, $bottom: auto)
 	position: $position
