--- a/webpack/templates/index.html
+++ b/webpack/templates/index.html
@@ -9,6 +9,6 @@
 <body>
 	<div id="__root"></div>
 	<script src="/dist/bundle.js"></script>
-	<script nomodule="" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 </body>
 </html>
